# sharp

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
example/: .gitignore  server.py
example/static/: main.js
example/templates/: index.html
sharp/: __init__.py  codegen.py  error.py  function.py
sharp/js/: class.js  function.js
sharp/naming/: __init__.py
