[metadata]
name = Flask-Sharp
# Version needs regex in setup.py.
url = https://github.com/revalo/sharp
project_urls =
    Documentation = https://github.com/revalo/sharp/README.md
    Code = https://github.com/revalo/sharp
    Issue tracker = https://github.com/revalo/sharp/issues
license = MIT
author = Shreyas Kapur
author_email = sharp-dev@mit.edu
maintainer = Shreyas Kapur
maintainer_email = sharp-dev@mit.edu
description = An automatic code API generator for Flask and JS.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.
